tests/errors/multiple-done.futil
import "primitives/core.futil";
import "primitives/memories/comb.futil";
component main() -> () {
  cells {
    r = std_reg(32);
  }
  wires {
    group do_r {
      r.write_en = 1'd1;
      r.in = 32'd1;
      do_r[done] = r.done;
      do_r[done] = !r.done ? 1'd1;
    }
  }
  control {
    do_r;
  }
}
