tests/errors/multiple-done.expect
---CODE---
1
---STDERR---
Error: tests/errors/multiple-done.futil
12 |      do_r[done] = !r.done ? 1'd1;
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Malformed Structure: Group `do_r` has multiple done conditions
